// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <div
    class="sc-beySPh dEAswb default"
  >
    <label
      class="sc-dmyCSP ihRrHi undefined-label"
      data-name="label"
      stile="default"
    >
      <h3
        class="sc-eDLKkx gVYdGR undefined-heading"
        data-name="heading"
        stile="default"
      />
      <input
        class="sc-guDLey fpCSGi undefined-input"
        data-error="false"
        data-name="input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with error 1`] = `
<div>
  <div
    class="sc-beySPh dEAswb default"
  >
    <label
      class="sc-dmyCSP ihRrHi undefined-label"
      data-name="label"
      stile="default"
    >
      <h3
        class="sc-eDLKkx gVYdGR undefined-heading"
        data-name="heading"
        stile="default"
      />
      <input
        class="sc-guDLey fpCSGi error undefined-error undefined-input"
        data-error="true"
        data-name="input"
        stile="default"
      />
    </label>
    <span
      class="sc-hLQSwg gpNhwr undefined-error-message"
      data-name="error-message"
    >
      error
    </span>
  </div>
</div>
`;
